# agent-takkub

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dev Team Office.html  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  agent-takkub.bat  docker-compose.yml  package-lock.json  package.json  projects.json.example  pyproject.toml  setup.py
.claude/: settings.json
.claude/agents/: analyst.md  backend.md  codex.md  critic.md  cursor.md  designer.md  devops.md  docs.md  frontend.md  gemini.md  kimi.md  mobile.md  opencode.md  qa.md  reviewer.md  security.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: ARCHITECTURE.md  INSTALL.md  MACOS_PORT_PLAN.md  PANE_TRANSCRIPT_IMPL.md  REQUIREMENTS.md  REVIEW_2026-05-20.md  TASKS.md  cockpit-freeze-rca-2026-05-29.md  cockpit-freeze-rca-2026-06-04.md  code-review-issue-cli-2026-05-22.md  issue-tracker-review-2026-05-22.md  red_team_analysis.md  release-checklist.md  review-user-level-inheritance-2026-05-22.md  security-audit-2026-05-21.md  smoke-user-mcp-inheritance-2026-05-22.md  token-reduction-review-2026-05-28.md  token-reduction-review-2026-05-30.md
docs/architecture/: 2026-06-21-file-relationship-graph-plan.md  depgraph.json  godfile-map.md
docs/audit/: 2026-07-05-installed-build-audit-gemini.md  2026-07-05-isolation-plan-crosscheck-codex.md  2026-07-05-maestro-idea-harvest.md  2026-07-05-mattpocock-skills-inventory.md  2026-07-13-runtime-storage-audit-codex.md
docs/bugs/: 2026-07-01-codex-26-delivery-rootcause.md
docs/code-review/: 2026-05-26-issue-001-003-fix-review.md  2026-05-26-issue-001-003-review.md
docs/design/: 2026-06-02-pipeline-settings-ui-mockup.html  2026-06-03-qa-shard-codex-crosscheck.md  2026-06-03-qa-shard-fan-out-gemini-review.md  2026-06-03-qa-shard-fanout.md  2026-07-11-105-phaseA-pane-split.md  2026-07-11-105-phaseB-headless.md  2026-07-11-central-home-audit.md  2026-07-11-central-home-impl.md  2026-07-11-rtk-settings-inject-verify.md  2026-07-11-settings-redesign-SPEC.md  2026-07-11-settings-redesign-codex.md  2026-07-11-settings-redesign-gemini.md  vault-knowledge-refactor.md
docs/design-review/: 2026-05-22-cockpit-status-bar.md  2026-05-31-cockpit-chrome.html  2026-05-31-cockpit-chrome.md  2026-07-02-pane-tools-dialog-codex-crosscheck.md  2026-07-02-pane-tools-dialog.md  2026-07-04-readme.md  2026-07-10-cockpit-settings-design-system.md  2026-07-10-settings-ui-codex.md  2026-07-10-settings-ui-gemini.md  2026-07-10-settings-ui-visual-critic.html  2026-07-10-settings-ui-visual-critic.md  2026-07-10-task-dock-responsive.md  2026-07-11-cockpit-ui-consistency-audit.html  2026-07-11-cockpit-ui-consistency-audit.md  2026-07-11-full-ui-walkthrough-ideas.html  2026-07-11-full-ui-walkthrough-ideas.md  2026-07-11-post-migration-visual-review.html  2026-07-11-post-migration-visual-review.md  2026-07-11-redesign-critic-r3.html  2026-07-11-redesign-critic-r3.md  2026-07-11-redesign-phase1-critic-r2.html  2026-07-11-redesign-phase1-critic-r2.md  2026-07-11-redesign-phase1-critic.html  2026-07-11-redesign-phase1-critic.md  2026-07-20-cockpit-settings-ia-gemini.md  2026-07-20-cockpit-settings-ia-review.html  2026-07-20-cockpit-settings-ia-review.md
docs/guides/: 2026-06-09-teamtreader-usage.html  2026-06-09-teamtreader-usage.md  2026-06-22-vault-second-brain.html  2026-06-22-vault-second-brain.md  2026-06-30-jt-inbound-checker-install.html  2026-06-30-jt-inbound-checker-install.md  2026-07-11-headless-docker.md
docs/plans/: 2026-06-16-vNEXT-dev-plan.md  2026-07-03-external-idea-integration-roadmap.md  2026-07-04-worktree-phase2-plan.md  2026-07-09-core-upgrade-plan.md  2026-07-09-cross-check-codex.md  2026-07-09-cross-check-gemini.md  2026-07-09-e2e-live.md  2026-07-09-final-review-claude.md  2026-07-09-jank-findings.md  2026-07-09-providerspec-design.md  2026-07-09-providerspec-review.md  2026-07-09-release-gate.md  2026-07-09-wave2-verify.md  2026-07-09-wave3-verify.md  2026-07-24-wave2-plan.md  npm-auto-install.md
docs/qa-reports/: 2026-05-26-issue-001-003-fix-verify.md  2026-05-26-issue-001-003-verify.md  2026-06-11-issue-52-53-verify.md  2026-06-11-issue-54-verify.md  2026-06-11-issue-55-verify.md  2026-06-12-conpty-fix-verify.md  2026-06-12-fix-round2-verify.md  2026-06-12-issue59-malformed-xml-verify.md  2026-07-12-full-system-review.md  2026-07-13-backend-6-residual-findings.md  2026-07-20-design-sweep-index.md  2026-07-20-final-gate.md  2026-07-20-provider-chip-removal-kimi-smoke.md  2026-07-20-provider-model-selection-batch-gate.md  2026-07-20-settings-merge-gate.md  2026-07-20-settings-two-window-ui-audit.md  2026-07-24-full-suite-verification.md  2026-07-24-token-audit.md  (+1 more)
npm/scripts/: lib.js  (+4 more)
scripts/: cleanup_vault_sessions.py  fix-qt-lts.bat  inspect_pid.py  inspect_windows.py  install.bat  install.command  install.ps1  install.sh  migrate_vault_logs.py  probe_codex_tui.py  run.bat  test-npm-install.sh  test_pty.py  test_write.py  test_write2.py  test_write3.py
tests/: conftest.py  test_agent_pane_auto_clear.py  test_agent_pane_idle_flag.py  test_agent_role_files_have_browser_guard.py  test_agent_role_files_have_git_guard.py  test_app_remote_teardown.py  test_auto_chain.py  test_auto_resume.py  test_boot_and_watchdog.py  test_browser_mcps.py  test_bug_check_broadcast.py  test_chatlog_scanner.py  test_claude_auth_config.py  test_claude_update.py  test_cli.py  test_cli_bin_check.py  test_cli_bind_error.py  test_cli_guard.py  test_cli_hook.py  test_cli_pane_tools.py  test_cli_provision.py  test_cli_server.py  test_cli_server_auth.py  test_cli_server_harvest.py  test_cli_server_hook.py  test_cli_server_role_gate.py  test_cli_server_session_report.py  test_cli_session_report.py  test_cli_status.py  test_close_event_remote_stop.py  test_cmd_release.py  test_cockpit_theme.py  test_codex_agents_md.py  test_codex_crash_instrumentation.py  test_codex_helper.py  test_codex_task_rewrite.py  test_color_term.py  test_config.py  test_config_wizard.py  test_consume_pane_hook.py  (+194 more)
tools/: gen_import_graph.py
(+262 files in other folders)
