[project]
name = "agent-takkub"
version = "1.0.17"
description = "Desktop cockpit for orchestrating Claude Code dev teammates on Windows"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Pinned to the Qt 6.8 LTS series. Qt 6.11.0 shipped a Qt6Core.dll regression
    # that aborts the cockpit with 0xc0000409 (__fastfail) — a hard native crash
    # with no Python traceback, observed recurring in the field (boot.log shows
    # no watchdog stall; Windows WER faults in QtCore). 6.8 is the battle-tested
    # LTS. Pin the Qt6 *binary* packages too (they carry Qt6Core.dll itself), not
    # just the bindings, so a resolver can't pull 6.11 back in. Bump deliberately.
    "PyQt6>=6.8,<6.12",
    "PyQt6-Qt6>=6.8,<6.12",
    "PyQt6-WebEngine>=6.8,<6.12",
    "PyQt6-WebEngine-Qt6>=6.8,<6.12",
    "pywinpty>=2.0;sys_platform=='win32'",
    "ptyprocess>=0.7;sys_platform!='win32'",
    "pyte>=0.8",
    "pyyaml>=6",
    "markdown>=3",
    "psutil>=5.9",
]

[project.scripts]
agent-takkub = "agent_takkub.app:main"
takkub = "agent_takkub.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "pre-commit>=3.7",
    "grimp>=3.14",        # dep-graph generation for tools/gen_import_graph.py
    "import-linter>=2.9", # architecture contracts (lint-imports)
    "build>=1.0",         # wheel builder used by the installed-mode gate tests
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_takkub = [
    "static/*.html",
    "static/*.js",
    "static/*.css",
    "static/*.png",
    # Staged by setup.py's custom build_py from the repo-root CLAUDE.md /
    # .claude/agents/*.md right before this list is collected — see
    # config.py's ASSETS_ROOT for the installed-vs-dev-checkout read path.
    "_assets/CLAUDE.md",
    "_assets/.claude/agents/*.md",
    # remote/ (P0 scaffold) mobile PWA — glob stays empty (no error) until
    # P1 adds files; deleting remote/ makes it empty again, build still works.
    "remote/static/*",
]

# ──────────────────────────────────────────────────────────────────
# ruff: lint + format
# ──────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["scripts/test_*.py", "scripts/inspect_*.py", "runtime/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
    "E501",   # line too long; let `format` handle wrapping
    "B008",   # function call in default arg (PyQt signal defaults are fine)
    "RUF001", # ambiguous unicode chars (we use Thai + diacritics on purpose)
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are intentional
"src/agent_takkub/orchestrator.py" = ["F401"]  # re-export façade — moved symbols re-exported for tests/app/main_window

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ──────────────────────────────────────────────────────────────────
# pytest
# ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

# ──────────────────────────────────────────────────────────────────
# import-linter: architecture guardrails
# ──────────────────────────────────────────────────────────────────
[tool.importlinter]
root_packages = ["agent_takkub"]

[[tool.importlinter.contracts]]
name = "engine-ui-separation"
type = "forbidden"
source_modules = ["agent_takkub.orchestrator"]
forbidden_modules = [
    "agent_takkub.main_window",
    "agent_takkub.app",
]

[[tool.importlinter.contracts]]
name = "cli-ipc-boundary"
type = "forbidden"
# Intent: cli.py drives the running cockpit over the TCP socket (cli_server), it must NOT
# pull the 5.8k-LOC orchestrator engine into the CLI process. _SAFE_PLUGINS was moved to
# config.py (leaf hub) so doctor no longer imports orchestrator, removing the indirect edge.
source_modules = ["agent_takkub.cli"]
forbidden_modules = ["agent_takkub.orchestrator"]

[[tool.importlinter.contracts]]
name = "leaf-modules-pure"
type = "forbidden"
# config/roles/_win_console are pure-leaf (fan-in 18/top-used). List all architectural
# siblings so any future sibling import is caught immediately.
source_modules = [
    "agent_takkub.config",
    "agent_takkub._win_console",
    "agent_takkub.roles",
    "agent_takkub.system_baseline",
]
forbidden_modules = [
    "agent_takkub.orchestrator",
    "agent_takkub.main_window",
    "agent_takkub.app",
    "agent_takkub.agent_pane",
    "agent_takkub.cli_server",
    "agent_takkub.cli",
    "agent_takkub.pty_session",
    "agent_takkub.lead_context",
    "agent_takkub.pane_env",
    "agent_takkub.vault_mirror",
    "agent_takkub.routing_planner",
    "agent_takkub.project_tab",
    "agent_takkub.terminal_widget",
    "agent_takkub.spawn_gate",
    "agent_takkub.provider_config",
    "agent_takkub.claude_auth_config",
    "agent_takkub.claude_auth_dialog",
    "agent_takkub.gemini_helper",
    "agent_takkub.codex_helper",
    "agent_takkub.pipeline_config",
    "agent_takkub.pipeline_dialog",
    "agent_takkub.lead_bash_audit",
    "agent_takkub.vault_graph",
    "agent_takkub.docs_verify",
    "agent_takkub.doctor",
    "agent_takkub.services",
    "agent_takkub.issues",
    "agent_takkub.token_meter",
    "agent_takkub.limit_status",
    "agent_takkub.chatlog_scanner",
    "agent_takkub.logs_panel",
    "agent_takkub.project_rules",
    "agent_takkub.role_memory",
    "agent_takkub.shared_dev_tools",
    "agent_takkub.user_profile",
    "agent_takkub.skill_audit",
    "agent_takkub.verify",
    "agent_takkub.update_helper",
    "agent_takkub.update_worker",
    "agent_takkub.rtk_helper",
    "agent_takkub.plan_tier",
    "agent_takkub.design_review_html",
    "agent_takkub.release",
    "agent_takkub.claude_update",
    "agent_takkub.codex_agents_md",
    "agent_takkub.provider_state",
    "agent_takkub.claude_auth_config",
]

[[tool.importlinter.contracts]]
name = "pipeline-executor-layer"
type = "forbidden"
# pipeline_executor is an engine-layer module (mixed into Orchestrator). It must
# NOT pull in UI or CLI modules — same constraint as orchestrator itself.
source_modules = ["agent_takkub.pipeline_executor"]
forbidden_modules = [
    "agent_takkub.main_window",
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "orchestrator-text-layer"
type = "forbidden"
# orchestrator_text is a pure-leaf helper (no Qt, no self). It must not import
# UI/CLI modules or orchestrator itself (would create a circular import).
source_modules = ["agent_takkub.orchestrator_text"]
forbidden_modules = [
    "agent_takkub.main_window",
    "agent_takkub.app",
    "agent_takkub.cli",
    "agent_takkub.orchestrator",
]

[[tool.importlinter.contracts]]
name = "lead-inbox-layer"
type = "forbidden"
# lead_inbox is an engine-layer mixin — must not import orchestrator (cycle) or UI/CLI.
source_modules = ["agent_takkub.lead_inbox"]
forbidden_modules = [
    "agent_takkub.orchestrator",
    "agent_takkub.main_window",
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "limit-autoresume-layer"
type = "forbidden"
# limit_autoresume is an engine-layer mixin (mixed into Orchestrator) — must
# not import orchestrator (cycle) or UI/CLI, same constraint as lead_inbox.
source_modules = ["agent_takkub.limit_autoresume"]
forbidden_modules = [
    "agent_takkub.orchestrator",
    "agent_takkub.main_window",
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "update-panel-layer"
type = "forbidden"
# update_panel is a UI-layer mixin (mixed into MainWindow). It must not pull in
# app or cli — same constraint as main_window itself.
source_modules = ["agent_takkub.update_panel"]
forbidden_modules = [
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "worktree-manager-leaf"
type = "forbidden"
# worktree_manager (#81) is a pure leaf: stdlib + config only. It's imported by
# the engine (orchestrator) AND the leaf helper orchestrator_text, so it must
# stay dependency-free of UI/CLI/engine or it would create an import cycle.
source_modules = ["agent_takkub.worktree_manager"]
forbidden_modules = [
    "agent_takkub.orchestrator",
    "agent_takkub.orchestrator_text",
    "agent_takkub.spawn_engine",
    "agent_takkub.main_window",
    "agent_takkub.app",
    "agent_takkub.cli",
    "agent_takkub.cli_server",
    "agent_takkub.agent_pane",
]

[[tool.importlinter.contracts]]
name = "project-wizard-layer"
type = "forbidden"
# project_wizard is a UI-layer mixin (mixed into MainWindow). It must not pull
# in app or cli — same constraint as main_window itself.
source_modules = ["agent_takkub.project_wizard"]
forbidden_modules = [
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "user-actions-layer"
type = "forbidden"
# user_actions is a UI-layer mixin (mixed into MainWindow). It must not pull
# in app or cli — same constraint as main_window itself.
source_modules = ["agent_takkub.user_actions"]
forbidden_modules = [
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "limit-panel-layer"
type = "forbidden"
# limit_panel is a UI-layer mixin (mixed into MainWindow). It must not pull
# in app or cli — same constraint as main_window itself.
source_modules = ["agent_takkub.limit_panel"]
forbidden_modules = [
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "spawn-engine-layer"
type = "forbidden"
# spawn_engine is a pure-logic mixin. It must never import from the UI layer
# or the orchestrator itself (which would create a cycle).
source_modules = ["agent_takkub.spawn_engine"]
forbidden_modules = [
    "agent_takkub.orchestrator",
    "agent_takkub.main_window",
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "status-header-layer"
type = "forbidden"
# status_header is a UI-layer mixin (mixed into MainWindow). It must not pull
# in app or cli — same constraint as main_window itself.
source_modules = ["agent_takkub.status_header"]
forbidden_modules = [
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "usage-meter-layer"
type = "forbidden"
# usage_meter is a pure-leaf UI widget — must not import orchestrator, app, or cli.
source_modules = ["agent_takkub.usage_meter"]
forbidden_modules = [
    "agent_takkub.orchestrator",
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "tutorial-overlay-layer"
type = "forbidden"
# tutorial_overlay is a pure-leaf UI widget — must not import orchestrator, app, or cli.
source_modules = ["agent_takkub.tutorial_overlay"]
forbidden_modules = [
    "agent_takkub.orchestrator",
    "agent_takkub.app",
    "agent_takkub.cli",
]

[[tool.importlinter.contracts]]
name = "remote-bolt-on-isolation"
type = "forbidden"
# remote/ (P0 scaffold — remote-control-plan/2026-07-07-remote-control.md) is a
# delete-to-uninstall bolt-on: the rest of the codebase must never structurally
# depend on it. The one core touch point (main_window.py::_boot) reaches it via
# importlib.import_module, which grimp doesn't see as a static edge, so this
# contract stays green with the wiring in place *and* after `rm -rf remote/`.
# source can't be the umbrella `agent_takkub` (remote is its descendant →
# import-linter "shared descendants" error); list the entry points + engine +
# every UI/CLI module that could plausibly wire remote instead.
source_modules = [
    "agent_takkub.app",
    "agent_takkub.main_window",
    "agent_takkub.cli",
    "agent_takkub.cli_server",
    "agent_takkub.orchestrator",
    "agent_takkub.spawn_engine",
    "agent_takkub.agent_pane",
    "agent_takkub.pipeline_executor",
    "agent_takkub.lead_inbox",
    "agent_takkub.update_panel",
    "agent_takkub.project_wizard",
    "agent_takkub.user_actions",
    "agent_takkub.status_header",
    "agent_takkub.doctor",
    "agent_takkub.config",
]
forbidden_modules = ["agent_takkub.remote"]
